...

    },
    "Display Name" : {
      "comment" : "The label for the display name field in a service setup sheet.",
      "isCommentAutoGenerated" : true
    },
    "Done" : {

    },
    "Download" : {

    },
    "Download Client" : {
...
    "Nothing Selected" : {

    },
    "Notification" : {

    },
    "Notification Settings" : {

    },
    "Notification Triggers" : {

    },
    "Notifications" : {

    },
    "Now" : {
      "comment" : "A label that displays the current category of a download client.",
      "isCommentAutoGenerated" : true
    },
...
    "SABnzbd Not Set Up" : {

    },
    "SABnzbd Server" : {

    },
    "Save" : {

    },
    "Save and Continue" : {

    },
    "Save Artwork Into Media Folders" : {
...
    "Set Priority" : {

    },
    "Set up the services you want to use, then continue into the app." : {

    },
    "Settings" : {

    },
    "Settings…" : {

    },
    "Setup Check" : {
...
    "Some releases are hidden by the selected filters." : {

    },
    "Some subtitle providers require an anti-captcha service before they can search or download reliably." : {

    },
    "Sonarr" : {

    },
    "Sonarr and Radarr library matching will be added in a later Jellyfin admin phase." : {

    },
    "Sonarr Service" : {
...
