...
            .init(key: .applicationUpdate, title: "Application Update", systemImage: "arrow.down.app.fill")
        ]

        switch serviceType {
        case .sonarr:
            common.insert(contentsOf: [
                .init(key: .seriesAdd, title: "Series Added", systemImage: "plus.rectangle.on.folder.fill"),
                .init(key: .seriesDelete, title: "Series Deleted", systemImage: "trash.fill"),
                .init(key: .episodeFileDelete, title: "Episode File Deleted", systemImage: "xmark.bin.fill"),
                .init(key: .episodeFileDeleteForUpgrade, title: "Episode File Deleted for Upgrade", systemImage: "arrow.triangle.2.circlepath")
            ], at: 4)
        case .radarr:
            common.insert(contentsOf: [
...
